# MIPT-Cpp-master-course

./: .gitignore  CMakeLists.txt  README.md  bld  cowString.hpp  main.cpp  run
Haskell-Type-Inference/: CMakeLists.txt  CMakePresets.json  lexer.l  run  utility.hpp
PersistentBST/: CMakeLists.txt  CMakePresets.json  README.md  bld  main.cpp  persistent.hpp  persistent_bst.hpp  radix_sort.cpp  radix_sort.hpp  run  utility.hpp
PersistentBST/test/: CMakeLists.txt  test.cpp
Physical-quantities/: CMakeLists.txt  README.md  main.cpp  physical-quantities.hpp  run
Physical-quantities/test/: test.cpp
Ram/: CMakeLists.txt  README.md  bld  lexer.hpp  lexer.l  main.cpp  ram.hpp  token.hpp
Ram/test/: CMakeLists.txt  test.cpp  test.py
Ram/test/data/: 1.in  2.in  3.err  3.in  4.in  42.in  5.in  6.in  7.in  control.in  input.in
Ram/test/data/context-free/: 01.sinp  02.sinp  03.sinp  04.sinp  05.sinp  06.sinp  08.sinp
Ram/test/data/error/: 04.err  05.err  06.err  2.err
Ram/test/data/single/: 01.sinp  02.sinp  03.sinp  04.sinp  07.sinp  08.sinp  09.sinp  10.sinp  11.sinp  12.sinp  13.sinp  14.sinp  15.sinp  16.sinp  5.sinp  6.sinp  9.sinp  test.sinp
cow_string/: CMakeLists.txt  CMakePresets.json  README.md  bld  cowString.hpp  test_run
cow_string/test/: CMakeLists.txt  customCharTraits.hpp  test.cpp  testCharTraits.hpp
string_twine/: CMakeLists.txt  stringTwine  string_twine.hpp
string_twine/test/: large_string  stress_test.py  test.cpp
task3/: perfect_forwarding.md  void_deduction.md
task4/: name_lookup.md  perfect_forwarding.md
task5/: Constant-expression.md  Core-constant-expression.md  constant_expression.md
test/: test.cpp
tuple/: CMakeLists.txt  README.md  bld  main.cpp  run  tuple.hpp
